[core] google analytics api + generator
Google Analytics api for Dandelion cover
 - all basic fields (no plugin fields)
 - creating tracker
 - set general field
 - sending data (pageview, event, social, ...)
 - multi-tracker definition

 This generate an asset based on the configuration put throw the Google Analytics api

 GoogleAnalytics.on(request)
                 .defaultTracker("UA-XXXX-Y")
                 .set(GeneralField.anonymizeIp, "true")
                 .send().pageview();

 become

 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-XXXX-Y', 'auto');
 ga('set', 'anonymizeIp', true);
 ga('send', 'pageview', {});

--- a/gua-core/pom.xml
+++ b/gua-core/pom.xml
@@ -14,5 +14,22 @@
    <name>Dandelion :: Google Universal Analytics :: Core</name>
    <description>Dandelion GUA Core module providing all APIs and standard implementations.</description>
 
+   <dependencies>
+      <dependency>
+         <groupId>com.github.dandelion</groupId>
+         <artifactId>dandelion-core</artifactId>
+         <version>0.11.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>servlet-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-test</artifactId>
+         <scope>test</scope>
+      </dependency>
+   </dependencies>
 
 </project>
