--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,15 @@
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+      <!-- Dependencies -->
+      <servlet-api.version>2.5</servlet-api.version>
+      <slf4j-api.version>1.7.5</slf4j-api.version>
+
+      <!-- Test dependencies -->
+      <junit.version>4.11</junit.version>
+      <spring-test.version>3.2.2.RELEASE</spring-test.version>
+      <assertj.version>1.6.0</assertj.version>
+
       <!-- Maven plugins -->
       <maven.compiler.version>2.3.2</maven.compiler.version>
       <maven.javadoc.version>2.8.1</maven.javadoc.version>
@@ -57,6 +66,79 @@
       <maven.gpg.version>1.4</maven.gpg.version>
    </properties>
 
+   <dependencyManagement>
+      <dependencies>
+
+         <!-- Servlet API -->
+         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+            <scope>provided</scope>
+         </dependency>
+
+         <!-- SLF4J -->
+         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+         </dependency>
+
+         <!-- Test dependencies -->
+         <!-- Spring -->
+         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-test.version}</version>
+            <scope>test</scope>
+         </dependency>
+
+         <!-- JUnit -->
+         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+         </dependency>
+
+         <!-- AssertJ -->
+         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
+
+
+   <dependencies>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-api</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.assertj</groupId>
+         <artifactId>assertj-core</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>ch.qos.logback</groupId>
+         <artifactId>logback-classic</artifactId>
+         <version>1.1.2</version>
+         <scope>test</scope>
+      </dependency>
+   </dependencies>
 
    <build>
       <pluginManagement>
